# cmd-gpt

./: .env.copy  .gitignore  Cargo.toml  go.mod  go.sum  main.go
.github/workflows/: build-and-publish.yml
cmd/: config.go  gen.go  model.go  provider.go  root.go  show.go
config/: config.go
constants/: enums.go
handlers/: anthropic.go  command.go  config.go  google.go  openai.go  openrouter.go
lib/: config.go  logger.go
src/: main.rs
