[package]
name = "cmd-gpt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.10", features = ["derive"] } 
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
dotenv = "0.15.0"